# argos

./: .dockerignore  .gitignore  .railwayignore  .worktreeinclude  CLAUDE.md  Dockerfile  Procfile  README.md  conductor.json  pyproject.toml  railway.json  requirements.txt
data/agent-actions/: CLM-001.jsonl  CLM-004.jsonl  CLM-007.jsonl  CLM-008.jsonl  CLM-009.jsonl  CLM-016.jsonl
data/bake-off/: drafter-20260601T202504Z.json  drafter-20260601T202615Z.json  drafter-gpt-20260601T203243Z.json  drafter-loop-20260601T203906Z.json  drafter-singlepass-20260601T204748Z.json  drafter-singlepass-20260601T210750Z.json  drafter-singlepass-20260601T211021Z.json  drafter-singlepass-20260601T211520Z.json  drafter-singlepass-20260601T212222Z.json  (+5 more)
docs/: AGENT_ARCHITECTURE.md  DECISIONS.md  DEPLOY_RAILWAY.md  MARKET_ANALYSIS.md  PLAN.md  STRATEGY.md  SYSTEM_ARCHITECTURE.md  TECH_PLAN.md  THESIS.md  data-layer.md
docs/architecture/: cockpit.md  (+1 more)
foundry/: README.md
scripts/: bake_off_drafter.py  dev_live.sh  export_claims_to_foundry_csv.py  foundry_smoke_test.py  generate_foundry_ontology_spec.py  load_crss.py  load_fars.py  prerun_cockpit_chains.py  render_gold_ranking_prompt.py  render_gold_ranking_prompt_v2.py  run_brief.py  run_brief_eval.py  run_coverage_anchor.py  run_document_reader_anchors.py  run_orchestrator_demo.py  run_triage_benchmark.py  run_triage_hybrid_benchmark.py  run_triage_policy_benchmark.py  run_triage_policy_with_reader_benchmark.py  smoke_test_keys.py  tune_triage_weights.py  variance_baseline_coverage.py
web/: .gitignore  package-lock.json  package.json
(+286 files in other folders)
