[project]
name = "argos"
version = "0.0.0"
description = "Argos — claims operations intelligence layer. AI specialists watch. Adjusters decide."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "anthropic>=0.40",
  "openai>=1.50",
  "duckdb>=1.5",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "eval: workflow eval cases (golden + adversarial). Run with `-m eval` to include; excluded from the default test run because they are designed for on-demand quality regression detection, not per-commit gating.",
    "foundry_integration: live Foundry OSDK round-trip tests. Mutates the live tenant; requires FOUNDRY_TOKEN. Run with `-m foundry_integration` to include; excluded by default because tenant state is shared with smoke tests and demos.",
]
addopts = "-m 'not eval and not foundry_integration'"
